fixed overflow in viewport

--- a/algos/src/js/components/input-field/styles.css
+++ b/algos/src/js/components/input-field/styles.css
@@ -1,7 +1,6 @@
 .inputWrapper {
   display: flex;
   align-items: center;
-  width: 100%;
   height: 100%;
   background: #FFFFFF;
   border: 1px solid #F3F3F3;
