--- a/algos/src/js/layout/styles.css
+++ b/algos/src/js/layout/styles.css
@@ -1,3 +1,10 @@
+
+.layoutWrapper {
+display: block;
+height: 100%;
+width: 100%;
+max-width: 100%;
+}
 .header {
     display: flex;
     justify-content: space-between;
@@ -9,8 +16,8 @@
     display: flex;
 }
 .container {
-    width: 100%;
     height: 100%;
+    display: block;
     margin: 0 24px;
 }
 .range{
